--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "caniuse-lite": "^1.0.30001757",
     "chart.js": "^4.5.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
